# lazyreq

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: pypi-publish.yml  pytests.yml
src/: demo.py
src/lazyreq/: __init__.py  cache.py  config.py  core.py  detector.py  utils.py
tests/: test_cache.py  test_core.py  test_lazy_module.py
