[project]
name = "lazyreq"
version = "0.1.0"
description = "A library to auto-install and manage dependencies."
readme = "README.md"
authors = [
    { name = "Netronis" }
]
requires-python = ">=3.9"
license = "Apache-2.0"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "build>=1.3.0",
  "twine>=6.2.0",
]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-autorefs>=1.4.3",
  "mkdocs-git-revision-date-localized-plugin>=1.5.0",
  "mkdocs-material>=9.6.23",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocstrings[python]>=0.30.1",
]

[project.urls]
Homepage = "https://github.com/Netronis/lazyreq"
Source = "https://github.com/Netronis/lazyreq"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[project.scripts]
lazyreq = "lazyreq.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
