[project]
name = "lazyreq"
version = "0.0.1"
description = "A library for manage dependencies."
readme = "README.md"
authors = [
    { name = "Netronis" }
]
requires-python = ">=3.9"
license = "Apache-2.0"

dependencies = []

[project.optional-dependencies]
demo = [
  "numpy>=2.0.2",
]

dev = [
  "pytest>=8.4.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "build>=1.3.0",
  "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/Netronis/lazyreq"
Source = "https://github.com/Netronis/lazyreq"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-qv --tb=short --strict-markers"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[project.scripts]
demo = "demo:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
